watch list without review optionals, renders and wo card style

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,11 @@
 // Specific CSS for your home-page
+
+.lists-container {
+  margin: 30px 30px;
+}
+
+.lists-grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 50px;
+}
