--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,3 +10,11 @@
 // Your CSS partials
 @import "components/index";
 @import "pages/index";
+
+// Changes to all the app
+
+body {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
