--- a/app/views/lists/_form.html.erb
+++ b/app/views/lists/_form.html.erb
@@ -1,5 +1,6 @@
 <%= simple_form_for(list) do |f| %>
   <%= f.input :name %>
+  <%= f.input :photo, as: :file %>
   <%= f.input :picture_url %>
   <%= f.submit class: "btn btn-primary"%>
 <% end %>
