--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -10,7 +10,7 @@
   <div class="lists-grid">
     <% @lists.each do |list| %>
       <%= link_to list_path(list.id) do %>
-        <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= list.picture_url %>)">
+        <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path list.photo.key, crop: :fill %>')">
             <%= list.name %>
         </div>
       <% end %>
